# axum-backend

./: .env.example  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  jwt_secret  postgres  salt
migrations/: V1__users_table.sql  V2__alter_users_table_add_password_column.sql  V3__alter_users_table_alter_password_column.sql  V4__alter_users_table_alter_password_column.sql  V5__alter_users_table_add_role_column.sql  V6__alter_users_table_add_primary_key_constraint.sql  V7__notes_table.sql
src/: main.rs  types.rs
src/api/: mod.rs
src/api/testable/: api.rs
src/api/users/: api.rs  types.rs
src/middleware/: auth.rs  mod.rs  roles.rs
src/modules/: mod.rs
src/modules/auth/: api.rs  types.rs
src/modules/common/: mod.rs
src/modules/notes/: api.rs  types.rs
src/modules/testable/: api.rs
src/modules/users/: api.rs  types.rs
