[package]
name = "axum-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
axum-extra = { version = "0.9.0", features = ["cookie"] }
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
chrono = "0.4.31"
dotenvy = "0.15.7"
http = "1.0.0"
jsonwebtoken = "9.2.0"
refinery = { version = "0.8.11", features = ["tokio-postgres", "postgres"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
sha256 = "1.4.0"
time = "0.3.31"
tokio = { version = "1.34.0", features = ["full"] }
tokio-postgres = "0.7.10"
tower-http = { version = "0.5.0", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
